[project]
name = "dsa"
version = "0.0.0"
description = "Data Structures and Algorithms"
requires-python = ">=3.13,<3.14"

[tool.basedpyright]
reportUnusedCallResult = false

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "D",
  "EM101",
  "ERA001",
  "INP",
  "PLR2004",
  "PT009",
  "RET503",
  "RUF003",
  "S101",
  "TRY003",
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.uv]
package = false
